--- a/public/index.html
+++ b/public/index.html
@@ -12,22 +12,127 @@
         />
         <!--
       manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+      user's mobile device or desktop. See
+      https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
         <link
             rel="manifest"
             href="%PUBLIC_URL%/images/icons/fav/site.webmanifest"
         />
         <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+      Notice the use of %PUBLIC_URL% in the tags above. It will be replaced with
+      the URL of the `public` folder during the build. Only files inside the
+      `public` folder can be referenced from the HTML.
 
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Gopkgs</title>
+        <meta
+            itemprop="description"
+            content="Custom Domain Module Import Service for
+    Google Go, Go, Golang projects. This includes private module hosting and
+    open source module hosting with the ability to migrate maintainership.
+    Hosting your own custom domain import pages is difficult to maintain and
+    this service simplifies the process substantially."
+        />
+        <meta
+            property="og:description"
+            content="Custom Domain Module Import Service for
+    Google Go, Go, Golang projects. This includes private module hosting and
+    open source module hosting with the ability to migrate maintainership.
+    Hosting your own custom domain import pages is difficult to maintain and
+    this service simplifies the process substantially."
+        />
+        <meta
+            name="twitter:description"
+            content="Custom Domain Module Import Service for
+    Google Go, Go, Golang projects. This includes private module hosting and
+    open source module hosting with the ability to migrate maintainership.
+    Hosting your own custom domain import pages is difficult to maintain and
+    this service simplifies the process substantially."
+        />
+        <meta name="twitter:url" content="/" />
+        <meta property="og:url" content="/" />
+        <meta property="og:locale" content="en" />
+        <meta name="language" content="English" />
+        <meta name="twitter:site" content="@devnw_com" />
+        <meta name="twitter:creator" content="@benjivesterby" />
+        <meta name="twitter:creator" content="@clevernyyyy" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta property="fb:app_id" content />
+        <meta property="fb:admins" content />
+        <meta
+            name="apple-mobile-web-app-title"
+            content="Custom Domain Module Import
+    Service for Google Go (golang) | GoPkgs.org"
+        />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        <meta name="robots" content="index, follow" />
+        <meta
+            itemprop="name"
+            content="Custom Domain Module Import Service for Google
+    Go (golang) | GoPkgs.org"
+        />
+        <meta
+            itemprop="description"
+            content="Custom Domain Module Import Service for
+    Google Go, Go, Golang projects. This includes private module hosting and
+    open source module hosting with the ability to migrate maintainership.
+    Hosting your own custom domain import pages is difficult to maintain and
+    this service simplifies the process substantially."
+        />
+        <meta
+            property="og:title"
+            content="Custom Domain Module Import Service for
+    Google Go (golang) | GoPkgs.org"
+        />
+        <meta
+            property="og:description"
+            content="Custom Domain Module Import Service for
+    Google Go, Go, Golang projects. This includes private module hosting and
+    open source module hosting with the ability to migrate maintainership.
+    Hosting your own custom domain import pages is difficult to maintain and
+    this service simplifies the process substantially."
+        />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="/" />
+        <meta property="og:image" content="/images/social.jpg" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:image" content="/images/social.jpg" />
+        <meta
+            name="twitter:title"
+            content="Custom Domain Module Import Service for
+    Google Go (golang) | GoPkgs.org"
+        />
+        <meta
+            name="twitter:description"
+            content="Custom Domain Module Import Service for
+    Google Go, Go, Golang projects. This includes private module hosting and
+    open source module hosting with the ability to migrate maintainership.
+    Hosting your own custom domain import pages is difficult to maintain and
+    this service simplifies the process substantially."
+        />
+        <meta name="twitter:site" content="@devnw_com" />
+        <meta property="twitter:image" content="/images/social.jpg" />
+        <meta name="twitter:image:src" content="/images/social.jpg" />
+        <meta itemprop="image" content="/images/social.jpg" />
+        <meta name="image" property="og:image" content="/images/social.jpg" />
+        <meta
+            name="image"
+            property="og:image:secure_url"
+            content="/images/social.jpg"
+        />
+        <meta
+            name="image"
+            property="article:image"
+            content="/images/social.jpg"
+        />
+        <title>
+            Custom Domain Module Import Service for Google Go (golang) |
+            GoPkgs.org
+        </title>
     </head>
 
     <body>
