Adding full link to social image

--- a/public/index.html
+++ b/public/index.html
@@ -98,9 +98,15 @@
         />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="/" />
-        <meta property="og:image" content="/images/social.jpg" />
+        <meta
+            property="og:image"
+            content="https://gopkgs.org/images/social.jpg"
+        />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:image" content="/images/social.jpg" />
+        <meta
+            name="twitter:image"
+            content="https://gopkgs.org/images/social.jpg"
+        />
         <meta
             name="twitter:title"
             content="Custom Domain Module Import Service for
@@ -115,19 +121,29 @@
     this service simplifies the process substantially."
         />
         <meta name="twitter:site" content="@devnw_com" />
-        <meta property="twitter:image" content="/images/social.jpg" />
-        <meta name="twitter:image:src" content="/images/social.jpg" />
-        <meta itemprop="image" content="/images/social.jpg" />
-        <meta name="image" property="og:image" content="/images/social.jpg" />
+        <meta
+            property="twitter:image"
+            content="https://gopkgs.org/images/social.jpg"
+        />
+        <meta
+            name="twitter:image:src"
+            content="https://gopkgs.org/images/social.jpg"
+        />
+        <meta itemprop="image" content="https://gopkgs.org/images/social.jpg" />
+        <meta
+            name="image"
+            property="og:image"
+            content="https://gopkgs.org/images/social.jpg"
+        />
         <meta
             name="image"
             property="og:image:secure_url"
-            content="/images/social.jpg"
+            content="https://gopkgs.org/images/social.jpg"
         />
         <meta
             name="image"
             property="article:image"
-            content="/images/social.jpg"
+            content="https://gopkgs.org/images/social.jpg"
         />
         <title>
             Custom Domain Module Import Service for Google Go (golang) |
